fix: update link styles for improved consistency and readability across blog and navigation components

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,7 @@
   --color-black: #252525;
   --color-white: #faf5f6;
   --color-gray: #6b6b6b;
+  --color-gold: #fbdc13;
   --color-dark-gray: #a4a4a4;
 }
 
@@ -14,4 +15,16 @@ body {
   font-style: normal;
   font-variation-settings: "wdth"100,
     "YTLC"500;
+}
+
+a {
+  color: var(--color-pink-500);
+  text-decoration: underline;
+}
+
+@media (prefers-color-scheme: dark) {
+  a {
+    color: var(--color-gold);
+  }
+
 }
